# 3d-binpacker-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  unit_tests_plan.md
examples/cpu_opt/: main.rs
examples/gpu_opt/: main.rs
examples/oneshot/: main.rs
examples/threeview/: Cargo.toml
examples/threeview/src/: main.rs
src/: lib.rs  wasm_api.rs
src/common/: bin.rs  bin_box.rs  box_spec.rs  container.rs  item.rs  mod.rs  pack_result.rs  point3f.rs  space.rs  sphere_spec.rs  utils.rs
src/kernels/: bestfit_ems.wgsl  firstfit_ems.cl.template
src/optimizer/: base.rs  gpu_optimizer.rs  mod.rs  solution.rs
src/optimizer/mutators/: bin_preservation_crossover.rs  crossover.rs  insert_mutation.rs  mod.rs  modifier.rs  scramble_mutation.rs  space_mutation.rs  swap_mutation.rs
src/solver/: best_fit_3d.rs  best_fit_ems.rs  first_fit_3d.rs  first_fit_ems.rs  mod.rs  placement.rs  placement_utils.rs  reference_solver.rs  solver_interface.rs  solver_properties.rs
src/solver/common/: mod.rs  placement.rs  solver_properties.rs
src/solver/parallelsolvers/: mod.rs  opencl_solver.rs  webgpu_solver.rs
src/solver/rectangles/: best_fit_3d.rs  best_fit_ems.rs  first_fit_3d.rs  first_fit_ems.rs  mod.rs  placement_utils.rs
src/solver/spheres/: first_fit.rs
tests/: wasm_api_tests.rs
