[package]
name = "rustport"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
parallel = ["rayon"]

[dependencies]
rand = "0.8.5"
rayon = { version = "1.12.0", optional = true }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = "z"
