[package]
name = "rustport"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
rand = "0.8.5"
rayon = { version = "1.12.0", optional = true }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "WorkerGlobalScope"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
wgpu = { version = "29.0", features = ["wgsl"] }
pollster = { version = "0.3" }
wasm-bindgen-futures = "0.4"
bytemuck = "1"
futures = "0.3"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ocl = "0.19.7"

[profile.release]
lto = true
opt-level = "z"

[[example]]
name = "oneshot"
path = "examples/oneshot/main.rs"

[[example]]
name = "cpu_opt"
path = "examples/cpu_opt/main.rs"

[[example]]
name = "gpu_opt"
path = "examples/gpu_opt/main.rs"
